--- a/index.html
+++ b/index.html
@@ -48,68 +48,68 @@
         <a title="Medycyna Chińska w Złotowie, Akupunktura i Dietetyka Michalina Marciniak" href="./index.html">
             <img src="dist/img/Medycyna-chinska-logo.png" alt="Logo Medycyna-chinska" class="nav__logo-bg">
         </a>
-            <div class="nav__menu-container">
-                <div class="nav__desktop-nav">
-                    <ul>
-                        <a href="#aboutme"><li class="nav__nav-item">O mnie</li></a>
-                        <a href="#offer" class="offer-desktop-item"><li class="nav__nav-item offer-color">Oferta <img class="nav__arrow-icon" src='dist/img/icon/arrow-icon-bottom.png' alt=""></li></a>
-                        <div class="nav__dropdown-menu-offer disactive desktop-offer-menu">
-                            <ul class="nav__dropdown-menu-ul">
-                                <a href="#chinese-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">medycyna chińska</li></a>
-                                <a href="#acupuncture" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">akupunktura</li></a>
-                                <a href="#dietetics" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">dietetyka</li></a>
-                                <a href="#herbal-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">ziołolecznictwo</li></a>
-                                <a href="#massage" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Masaż gua sha</li></a>
-                                <a href="#chinese-bubbles" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Bańki chińskie</li></a>
-                                <a href="#heat-therapy" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Moksowanie / Terapia ciepłem</li></a>
-                                <a href="szkolenia-akupunktura.html" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
-                            </ul>
-                        </div>
-                        <a href="#price-list"> <li class="nav__nav-item">Cennik</li></a>
-                        <a href="#opinion"><li class="nav__nav-item">Opinie</li></a>
-                        <a href="#blog"><li class="nav__nav-item">Blog</li></a>
-                        <a href="#faq"><li class="nav__nav-item">FAQ</li></a>
-                        <a href="#contact"><li class="nav__nav-item">Kontakt</li></a>
-                    </ul>
-                </div>
-
-                <button class="nav__burger-btn">
-                    <div class="nav__burger-btn-container">
-                        <span class="nav__burger-btn-items nav__burger-btn-span1"></span>
-                        <span class="nav__burger-btn-items nav__burger-btn-span2"></span>
-                        <span class="nav__burger-btn-items nav__burger-btn-span3"></span>
+        <div class="nav__menu-container">
+            <div class="nav__desktop-nav">
+                <ul>
+                    <a href="#aboutme"><li class="nav__nav-item">O mnie</li></a>
+                    <a href="#offer" class="offer-desktop-item"><li class="nav__nav-item offer-color">Oferta <img class="nav__arrow-icon" src='dist/img/icon/arrow-icon-bottom.png' alt=""></li></a>
+                    <div class="nav__dropdown-menu-offer disactive desktop-offer-menu">
+                        <ul class="nav__dropdown-menu-ul">
+                            <a href="#chinese-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">medycyna chińska</li></a>
+                            <a href="#acupuncture" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">akupunktura</li></a>
+                            <a href="#dietetics" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">dietetyka</li></a>
+                            <a href="#herbal-medicine" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">ziołolecznictwo</li></a>
+                            <a href="#massage" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Masaż gua sha</li></a>
+                            <a href="#chinese-bubbles" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Bańki chińskie</li></a>
+                            <a href="#heat-therapy" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Moksowanie / Terapia ciepłem</li></a>
+                            <a href="szkolenia-akupunktura.html" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
+                        </ul>
                     </div>
-                </button>
+                    <a href="#price-list"> <li class="nav__nav-item">Cennik</li></a>
+                    <a href="#opinion"><li class="nav__nav-item">Opinie</li></a>
+                    <a href="#blog"><li class="nav__nav-item">Blog</li></a>
+                    <a href="#faq"><li class="nav__nav-item">FAQ</li></a>
+                    <a href="#contact"><li class="nav__nav-item">Kontakt</li></a>
+                </ul>
             </div>
-        </div>
 
-        <div class="nav__mobile-menu">
-            <div class="nav__mobile-menu-container">
-                <ul class="nav__mobile-menu-items">
-                    <a href="#aboutme" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links1">O mnie</li></a>
-                    <a href="#offer" class="nav__mobile-menu-link "><li class="nav__mobile-menu-items-content mobile-menu-offer-item">Oferta<img class="nav__arrow-icon nav_arrow-icon-mobile" src='dist/img/icon/arrow-icon-right.png' alt=""></li></a>
-                    <a href="#price-list" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
-                    <a href="#opinion" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links3">Opinie</li></a>
-                    <a href="#blog" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content blog-item mobile-nav-links4">Blog</li></a>
-                    <a href="#faq" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">FAQ</li></a>
-                    <a href="#contact" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">Kontakt</li></a>
-                </ul>
-            </div>
-            <div class="nav__mobile-menu-container-offer-submenu">
-                <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
-                <ul class="nav__mobile-menu-items submenu-UL-items">
-                    <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Medycyna Chińska</li></a>
-                    <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Akupunktura</li></a>
-                    <a href="#dietetics" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link3">Dietetyka</li></a>
-                    <a href="#herbal-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Ziołolecznictwo</li></a>
-                    <a href="#massage" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link5">Masaż gua sha</li></a>
-                    <a href="#chinese-bubbles" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link6">bańki chińskie</li></a>
-                    <a href="#heat-therapy" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link7">Moksowanie / Terapia ciepłem</li></a>
-                    <a href="szkolenia-akupunktura.html" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link8">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
-                </ul>
-            </div>
+            <button class="nav__burger-btn">
+                <div class="nav__burger-btn-container">
+                    <span class="nav__burger-btn-items nav__burger-btn-span1"></span>
+                    <span class="nav__burger-btn-items nav__burger-btn-span2"></span>
+                    <span class="nav__burger-btn-items nav__burger-btn-span3"></span>
+                </div>
+            </button>
         </div>
-    </nav>
+    </div>
+
+    <div class="nav__mobile-menu">
+        <div class="nav__mobile-menu-container">
+            <ul class="nav__mobile-menu-items">
+                <a href="#aboutme" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links1">O mnie</li></a>
+                <a href="#offer" class="nav__mobile-menu-link "><li class="nav__mobile-menu-items-content mobile-menu-offer-item">Oferta<img class="nav__arrow-icon nav_arrow-icon-mobile" src='dist/img/icon/arrow-icon-right.png' alt=""></li></a>
+                <a href="#price-list" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
+                <a href="#opinion" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links3">Opinie</li></a>
+                <a href="#blog" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content blog-item mobile-nav-links4">Blog</li></a>
+                <a href="#faq" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">FAQ</li></a>
+                <a href="#contact" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">Kontakt</li></a>
+            </ul>
+        </div>
+        <div class="nav__mobile-menu-container-offer-submenu">
+            <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
+            <ul class="nav__mobile-menu-items submenu-UL-items">
+                <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Medycyna Chińska</li></a>
+                <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Akupunktura</li></a>
+                <a href="#dietetics" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link3">Dietetyka</li></a>
+                <a href="#herbal-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link4">Ziołolecznictwo</li></a>
+                <a href="#massage" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link5">Masaż gua sha</li></a>
+                <a href="#chinese-bubbles" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link6">bańki chińskie</li></a>
+                <a href="#heat-therapy" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link7">Moksowanie / Terapia ciepłem</li></a>
+                <a href="szkolenia-akupunktura.html" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link8">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
+            </ul>
+        </div>
+    </div>
+</nav>
     <header class="header">
 
     <div class="header__box">
@@ -2199,7 +2199,7 @@
         <div class="footer__container">
 
             <div class="footer__box footer__box-company">
-                <a href="http://www.akupunktura-zlotow.pl">
+                <a href="./index.html">
                     <img class="footer__box-company-logo" src="dist/img/logo-footer.jpg"
                         alt="Logo, Medycyna Chińska Akupunktura Michalina Marciniak">
                 </a>
@@ -2293,4 +2293,4 @@
     <script src="dist/js/main.min.js"></script>
 </body>
 
-</html> 
+</html>
