--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
                 </ul>
             </div>
 
-            <button class="nav__burger-btn">
+            <button class="nav__burger-btn" aria-label="Menu">
                 <div class="nav__burger-btn-container">
                     <span class="nav__burger-btn-items nav__burger-btn-span1"></span>
                     <span class="nav__burger-btn-items nav__burger-btn-span2"></span>
@@ -92,7 +92,7 @@
             </ul>
         </div>
         <div class="nav__mobile-menu-container-offer-submenu">
-            <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
+            <button class="nav__mobile-menu-items-back-btn" aria-label="cofnij"><svg class="nav__back-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#333333" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left-circle"><circle cx="12" cy="12" r="10"></circle><polyline points="12 8 8 12 12 16"></polyline><line x1="16" y1="12" x2="8" y2="12"></line></svg>Wstecz</button>
             <ul class="nav__mobile-menu-items submenu-UL-items">
                 <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Medycyna Chińska</li></a>
                 <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Akupunktura</li></a>
@@ -395,7 +395,8 @@
             </span>
             <span class="footer__company-name-small">Michalina Marciniak</span></p>
             <div class="footer__line"></div>
-            <p class="footer__project">projekt i wykonanie: <a class="footer__project-link" href="http://www.dreampage.pl" target="_blank">www.dreampage.pl</a></p>
+            <p class="footer__project">projekt i wykonanie: <a class="footer__project-link" href="http://www.dreampage.pl" target="_blank">www.dreampage.pl</a>
+        </p>
     </div>
         
 
