--- a/szkolenia-akupunktura.html
+++ b/szkolenia-akupunktura.html
@@ -69,7 +69,7 @@
                 </ul>
             </div>
 
-            <button class="nav__burger-btn">
+            <button class="nav__burger-btn" aria-label="Menu">
                 <div class="nav__burger-btn-container">
                     <span class="nav__burger-btn-items nav__burger-btn-span1"></span>
                     <span class="nav__burger-btn-items nav__burger-btn-span2"></span>
@@ -92,7 +92,7 @@
             </ul>
         </div>
         <div class="nav__mobile-menu-container-offer-submenu">
-            <button class="nav__mobile-menu-items-back-btn"><img src="dist/img/icon/back-btn.png" alt="" class="nav__back-icon">Wstecz</button>
+            <button class="nav__mobile-menu-items-back-btn" aria-label="cofnij"><svg class="nav__back-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#333333" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left-circle"><circle cx="12" cy="12" r="10"></circle><polyline points="12 8 8 12 12 16"></polyline><line x1="16" y1="12" x2="8" y2="12"></line></svg>Wstecz</button>
             <ul class="nav__mobile-menu-items submenu-UL-items">
                 <a href="#chinese-medicine" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link1">Medycyna Chińska</li></a>
                 <a href="#acupuncture" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link2">Akupunktura</li></a>
@@ -184,9 +184,8 @@
                         <li>Dostosowanie zaleceń do indywidualnej konstytucji pacjenta</li>
                     </ul>
 
-                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top-bottom"></span>
 
-                    <div class="trainings-main__info-box">
 
                         <div class="trainings-main__schedule">
                             <h3 class="h3-title-subsections">Harmonogram</h3>
@@ -196,6 +195,8 @@
 
                         </div>
 
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
                         <div class="trainings-main__location">
                             <h3 class="h3-title-subsections">Lokalizacja</h3>
                             <p class="trainings-main__content-without-space trainings-main__addres">
@@ -204,7 +205,6 @@
                                 <span>77-400 Złotów</span>
                             </p>
                         </div>
-                    </div>
 
                     <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
@@ -214,19 +214,19 @@
                         <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia
                             zawiera materiały szkoleniowe: skrypt do zajęć, obiad, przekąski, oraz napoje ciepłe i
                             zimne.
-                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat.</span>
                         </p>
 
                     </div>
 
-                    <span
+                    <!-- <span
                         class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
                     <p class="trainings-main__text">Serdecznie zapraszamy wszystkich, którzy chcą zapoznać się z
                         Medycyną Chińską!
                         Kurs z dietetyki wg TCM jest do tego idealną możliwością, poznajemy tu kolejno teorię medycyny
                         chińskiej i jej tajniki, zalecenia odpowiednie dla danego zaburzenia oraz praktyczne podejście
                         do gotowania.
-                    </p>
+                    </p> -->
                 </div>
 
 
@@ -287,16 +287,16 @@
 
                     </ul>
 
-                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top-bottom"></span>
 
-                    <div class="trainings-main__info-box">
 
                         <div class="trainings-main__schedule">
                             <h3 class="h3-title-subsections">Harmonogram</h3>
                             <p class="trainings-main__content-without-space">Sobota 10.00 – 18.00</p>
                             <p class="trainings-main__content-without-space">Niedziela 9.00 – 16.00</p>
-
                         </div>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
                         <div class="trainings-main__location">
                             <h3 class="h3-title-subsections">Lokalizacja</h3>
@@ -306,7 +306,6 @@
                                 <span>77-400 Złotów</span>
                             </p>
                         </div>
-                    </div>
 
                     <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
@@ -316,15 +315,15 @@
                         <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia
                             zawiera materiały szkoleniowe: skrypt do zajęć, igły, obiad każdego dnia, przekąski, oraz
                             napoje ciepłe i zimne.
-                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat.</span>
                         </p>
                     </div>
 
-                    <span
+                    <!-- <span
                         class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
 
                     <p class="trainings-main__text">Grupa: 6-8 osób, ćwiczymy w małej kameralnej grupie.
-                    </p>
+                    </p> -->
                 </div>
 
 
@@ -351,16 +350,17 @@
 
                     </ol>
 
-                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top-bottom"></span>
 
-                    <div class="trainings-main__info-box">
+
 
                         <div class="trainings-main__schedule">
                             <h3 class="h3-title-subsections">Harmonogram</h3>
                             <p class="trainings-main__content-without-space">Godziny: 10.00 – 15.00 lub 15.30</p>
                             <p class="trainings-main__content-without-space">(5h zajęć z krótkimi przerwami)</p>
-
                         </div>
+
+                        <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
                         <div class="trainings-main__location">
                             <h3 class="h3-title-subsections">Lokalizacja</h3>
@@ -370,7 +370,7 @@
                                 <span>77-400 Złotów</span>
                             </p>
                         </div>
-                    </div>
+
 
                     <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
@@ -379,15 +379,15 @@
                         <p class="trainings-main__content-without-space">Koszt kursu: 400zł</p>
                         <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia
                             zawiera materiały szkoleniowe: skrypt do zajęć, przekąski, oraz napoje ciepłe i zimne.
-                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat.</span>
                         </p>
                     </div>
 
-                    <span
+                    <!-- <span
                         class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
 
                     <p class="trainings-main__text">Grupa: 6 osób, ćwiczymy w małej kameralnej grupie.
-                    </p>
+                    </p> -->
                 </div>
 
 
@@ -434,16 +434,17 @@
                             zastosowania.</li>
                     </ol>
 
-                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top-bottom"></span>
 
-                    <div class="trainings-main__info-box">
+
 
                         <div class="trainings-main__schedule">
                             <h3 class="h3-title-subsections">Harmonogram</h3>
                             <p class="trainings-main__content-without-space">Godziny: 10.00 – 17.00 </p>
                             <p class="trainings-main__content-without-space">(w tym 1 - 1,5h przerwy obiadowej)</p>
-
                         </div>
+
+                        <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
                         <div class="trainings-main__location">
                             <h3 class="h3-title-subsections">Lokalizacja</h3>
@@ -453,7 +454,7 @@
                                 <span>77-400 Złotów</span>
                             </p>
                         </div>
-                    </div>
+
 
                     <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
 
@@ -461,15 +462,15 @@
                         <h3 class="h3-title-subsections">cena</h3>
                         <p class="trainings-main__content-without-space">Koszt kursu: 550zł</p>
                         <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia zawiera wszystkie materiały szkoleniowe: skrypt do zajęć, moksę i potrzebne akcesoria, dodatkowo obiad, który zjemy na miejscu, przekąski, oraz napoje ciepłe i zimne.
-                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat.</span>
                         </p>
 
                     </div>
 
-                    <span
+                    <!-- <span
                         class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
                     <p class="trainings-main__text">Grupa: 6 – 8 osób, ćwiczymy w małej kameralnej grupie.
-                    </p>
+                    </p> -->
                 </div>
 
 
@@ -590,7 +591,8 @@
             </span>
             <span class="footer__company-name-small">Michalina Marciniak</span></p>
             <div class="footer__line"></div>
-            <p class="footer__project">projekt i wykonanie: <a class="footer__project-link" href="http://www.dreampage.pl" target="_blank">www.dreampage.pl</a></p>
+            <p class="footer__project">projekt i wykonanie: <a class="footer__project-link" href="http://www.dreampage.pl" target="_blank">www.dreampage.pl</a>
+        </p>
     </div>
         
 
